<resources>
    <string name="app_name">cocoger</string>
    <string name="title_activity_maps">Map</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="reenter_password">Same Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="signup">Sign Up</string>
    <string name="name">Display Name</string>
    <string name="birth_year">Birth Year</string>
    <string name="gender">Gender</string>
    <string name="login_for_member">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="back">BACK</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_instruction">We just need your registered Email address to send your password reset instruction.</string>
    <string name="authenticating">Authenticating...</string>
    <string name="creating_account">Create Account...</string>
    <string name="signup_success">Successfully signed up</string>
    <string name="action_voice_rec"></string>
    <string name="action_location"></string>
    <string name="action_taxi"></string>
    <string name="action_change_colors"></string>
    <string name="search_view_hint">Search here</string>
    <string name="about_app">About</string>
    <string name="open_source_libraries">Open Source Libraries</string>
    <string name="location_denied_title">Denied to access this device\'s location?</string>
    <string name="location_denied_content">App needs to access this device\'s location.  Try again or exit.</string>
    <string name="googleapi_denied_title">Connection to GoogleApi</string>
    <string name="googleapi_denied_content">Connection to GoogleApi service failed.  Install the GoogleApi service and try again.</string>
    <string name="exit">Exit</string>
    <string name="try_again">Try again</string>
    <string name="no_friend">Friends waiting for your invitation!!!</string>
    <string name="invite_friend">Invite App</string>
    <string name="add_friend">Add Friends</string>
    <string name="signup_note">
        <![CDATA[
        <html>
        By signing up, I agree to Cocoger\'s
        <a href="https://www.asahi.com">Terms of Service</a>
        and
        <a href="https://www.google.com">Privacy Policy</a>.
        </html>
        ]]>
    </string>
    <string name="user_search_empty_text">
        <![CDATA[
        <html>
        <h2>Search Friends</h2>
        <p>e &#8594; Emma Smith</p>
        <p>n &#8594; Noah Jones</p>
        </html>
        ]]>
    </string>
    <string-array name="range_items">
        <item>current</item>
        <item>city</item>
        <item>county</item>
        <item>state</item>
        <item>country</item>
        <item>none</item>
    </string-array>
    <string-array name="range_map">
        <item>none=NONE</item>
        <item>country=COUNTRY</item>
        <item>state=ADMINAREA</item>
        <item>county=SUBADMINAREA</item>
        <item>city=LOCALITY</item>
        <item>current=CURRENT</item>
    </string-array>
    <string name="street_view">street view</string>
    <string name="search_nearby">Search nearby</string>
    <string name="save_to_map">Save to map</string>
    <string name="post_facebook">What\'s on your mind?"</string>
    <string name="street_view_image_url" formatted="false">https://maps.googleapis.com/maps/api/streetview?size=96x96&amp;location=%f,%f</string>
    <string name="more_info">More Info</string>
    <string name="google_map_url" formatted="false">https://maps.google.com/maps?q=%f,%f</string>
    <string name="by_creator" formatted="false">by %s</string>
    <string name="appinvite_error">Cannot present App Invite Dialog.</string>
    <string name="picture">Picture</string>
    <string name="no_picture">N/A</string>
    <string name="min_name">Minimum 4 characters</string>
    <string name="min_password">Minimum 6 numbers</string>
    <string name="no_year_birth">Select one of the years</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="no_gender">"Select one of the genders</string>
    <string name="no_password">Empty password</string>
    <string name="no_password_match">Password not match</string>
    <string name="verification_email_sent">Sign up successful.  Verification email sent.</string>
    <string name="password_reset_email_sent">Password reset email has been sent successfully.</string>
    <string name="search">Search</string>
    <string name="search_users">Search friends</string>
    <string name="display_name">Display name</string>
    <string name="start_app">Start App</string>
    <string name="notice">Notice</string>
    <string name="notice_narrow_range_change">Narrowing range needs to be approved by your friend.  Do you want to send the request?</string>
    <string name="notice_broad_range_change">Do you really want to change the range?  Once it is changed broader, you can\'t change it narrower back without your friend\'s approval.</string>
    <string name="range_changed_narrow">The request has been sent successfully.  Once your friend approves it, the range will be changed.</string>
    <string name="range_changed_broad">The range has been changed successfully.</string>
    <string name="term_services">Terms of Services</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_message_available">No message</string>
    <string name="friend">Friend</string>
    <string name="pending">Pending</string>
    <string name="unfriend">Unfriend</string>
    <string name="confirm_unfriend">Do you really want to unfriend %s?</string>
    <string name="ungroup">Leaving Group</string>
    <string name="confirm_ungroup">Do you really want to leave %s?</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="friend_request">Friend Request</string>
    <string name="friend_request_sent">Your friend request has been sent.</string>
    <string name="friend_request_failed">You have already friend requests from some of your friends.  Those requests have been accepted.  For the other requests, please try again. </string>
    <string name="search_users_title">Users</string>
    <string name="request_friend">Request Friend</string>
    <string name="confirm_logout">You will not receive friends\' locations and update yours neither.  Do you still want to log out?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="location_sharing">Location Sharing</string>
    <string name="receive_friend_request" formatted="false">You\'ve  received a friend request from %s.</string>
    <string name="receive_range_request" formatted="false">You\'ve received a range request to %s from %s.</string>
    <string name="receive_group_join" formatted="false">You\'ve invited to join the group, %s.</string>
    <string name="send_friend_request" formatted="false">You sent a friend request to %s.</string>
    <string name="map_layers">Map Layers</string>
    <string name="account">Account</string>
    <string name="timeline">Timeline</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="no_location_timeline">No location history found</string>
    <string name="direction">Direction</string>
    <string name="no_direction_available">No direction available.  Try again later.</string>
    <string name="time_range">Time Range</string>
    <string name="speed_rate">2.23694</string>
    <string name="timeline_marker_title_format" formatted="false">%s (%f m/h)</string>
    <string name="reporting_about">Reporting about:</string>
    <string name="problem">Problem</string>
    <string name="suggestion">Suggestion</string>
    <string name="description">Description</string>
    <string name="dismiss">Dismiss</string>
    <string name="location_update_interval">Location Update Interval</string>
    <string name="location_update_foreground">Foreground (min)</string>
    <string name="location_update_background">Background</string>
    <string name="num_1">1</string>
    <string name="num_3">3</string>
    <string name="num_5">5</string>
    <string name="num_15">15</string>
    <string name="num_30">30</string>
    <string name="num_60">60</string>
    <string name="location_update_warning">It expires in 15 mins and back to 30 mins.</string>
    <string name="last_location_update">Last Location Updated: %1$s</string>
    <string name="no_message">You have no message now.</string>
    <string name="failed_feedback">We are very sorry that your feedback did not reach us due to the network problem.  Please try again later.</string>
    <string name="too_short_direction">Too close for direction.</string>
    <string name="me">me</string>
    <string name="title">Title</string>
    <string name="show_friends">Seen by friends</string>
    <string name="address">Address</string>
    <string name="no_place">You don\'t have a place yet.  Long press on map to add new places.</string>
    <string name="email_not_entered">Email not entered</string>
    <string name="password_not_entered">Password not entered</string>
    <string name="no_feedback_warning">Please type your feedback.</string>
    <string name="thanks_feedback">Thank you very much for the feedback!!!</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">Thank you for the installation.  We hope that you enjoy the app.</string>
    <string name="place_remove">Saved Location</string>
    <string name="confirm_place_remove">Do you really want to remove this?</string>
    <string name="create">Create</string>
    <string name="create_group">Create group</string>
    <string name="save_group">Save</string>
    <string name="no_group">You don\'t have a group yet.</string>
    <string name="group_list">Group</string>
    <string name="new_group">New Group</string>
    <string name="edit_group">Update Group</string>
    <string name="group_name">Group name</string>
    <string name="group_members">Group members</string>
    <string name="friends">Friends</string>
    <string name="join">Join</string>
    <string name="date">Date</string>
    <string name="display_name_prompt">Input Display Name</string>
    <string name="birth_year_prompt">Select Birth Year</string>
    <string name="gender_prompt">Select Gender</string>
</resources>
