<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_update_interval"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_update_foreground"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <RadioGroup
                android:id="@+id/foreground_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <RadioButton
                    android:id="@+id/fg_interval_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/num_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <RadioButton
                    android:id="@+id/fg_interval_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_3"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <RadioButton
                    android:id="@+id/fg_interval_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            </RadioGroup>

            <include layout="@layout/item_divider" />

            <android.support.v7.widget.SwitchCompat
                android:id="@+id/switch_background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/location_update_background"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <RadioGroup
                android:id="@+id/background_interval"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:paddingTop="8dp">

                <RadioButton
                    android:id="@+id/bg_interval_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/num_1"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <RadioButton
                    android:id="@+id/bg_interval_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <RadioButton
                    android:id="@+id/bg_interval_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_15"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <RadioButton
                    android:id="@+id/bg_interval_30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_30"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

                <RadioButton
                    android:id="@+id/bg_interval_60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/num_60"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            </RadioGroup>

        </LinearLayout>

        <TextView
            android:id="@+id/location_update_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_update_warning"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/red"
            android:visibility="invisible" />

    </LinearLayout>

</ScrollView>
