<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Import" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_fb_white_58"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/about_app">
        <menu>
            <item
                android:id="@+id/nav_open_source"
                android:icon="@drawable/ic_opensource_48"
                android:title="@string/open_source_libraries" />
        </menu>
    </item>

</menu>
