<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <android.support.v7.widget.CardView
        android:id="@+id/street_view_container"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:elevation="10dp"
        android:gravity="center"
        app:cardCornerRadius="8dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/street_view"
            style="@android:style/Widget.Material.Light.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/street_view"
            android:cropToPadding="true"
            android:padding="1dp"
            android:scaleType="centerCrop" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/friend_list"
        android:gravity="center"
        android:padding="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lower_pane"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/street_view_container">

    </android.support.v7.widget.RecyclerView>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/current_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/street_view_container"
        android:layout_marginTop="4dp"
        android:layout_toLeftOf="@+id/list"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Material.Caption" />

    <LinearLayout
        android:id="@+id/lower_pane"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_address"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/more_info"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/more_info" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_to_map"
            style="@android:style/Widget.Material.Light.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_to_map" />

    </LinearLayout>

</RelativeLayout>